[gd_scene load_steps=4 format=3 uid="uid://7rm76yft7pay"]

[ext_resource type="Theme" path="res://resources/main_theme.tres" id="1_0wmy8"]
[ext_resource type="Script" path="res://scripts/ui/pause_screen.gd" id="1_gg3mg"]
[ext_resource type="PackedScene" uid="uid://bxoqkl0fs3coq" path="res://scenes/options_menu.tscn" id="2_6k2nu"]

[node name="PauseScreen" type="CanvasLayer" node_paths=PackedStringArray("options_menu")]
layer = 9
script = ExtResource("1_gg3mg")
options_menu = NodePath("OptionsCanvas")

[node name="OptionsCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="OptionsMenu" parent="OptionsCanvas" instance=ExtResource("2_6k2nu")]
offset_top = 67.0
offset_bottom = 67.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0wmy8")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -301.0
offset_right = 210.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Paused"

[node name="ResumeButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -181.0
offset_top = -510.0
offset_right = 181.0
offset_bottom = -426.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Resume"

[node name="OptionsButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -181.0
offset_top = -396.0
offset_right = 181.0
offset_bottom = -312.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Options"

[node name="ReturnButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.5
offset_top = -269.0
offset_right = 181.5
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Restart"

[node name="MainMenuButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -211.0
offset_top = -143.0
offset_right = 212.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "Main Menu"
